Refactor TraceCutter to improve midpoint calculation for active points